--- a/examples/gpt-oss-inference/Cargo.toml
+++ b/examples/gpt-oss-inference/Cargo.toml
@@ -9,5 +9,4 @@ publish = false
 workspace = true
 
 [dependencies]
-burn = { path = "../../crates/burn", features = ["ndarray"] }
-
+burn = { path = "../../crates/burn", features = ["metal"] }
