--- a/Cargo.toml
+++ b/Cargo.toml
@@ -169,13 +169,13 @@ portable-atomic = { version = "1.11.1" }
 portable-atomic-util = { version = "0.2.4", features = ["alloc"] }
 
 ### For the main burn branch. ###
-cubecl = { git = "https://github.com/tracel-ai/cubecl", default-features = false, rev = "018341e10e98dd6e93ac28592adc56f5710c1453" }
-cubecl-common = { git = "https://github.com/tracel-ai/cubecl", default-features = false, rev = "018341e10e98dd6e93ac28592adc56f5710c1453" }
-cubecl-quant = { git = "https://github.com/tracel-ai/cubecl", default-features = false, rev = "018341e10e98dd6e93ac28592adc56f5710c1453" }
+# cubecl = { git = "https://github.com/tracel-ai/cubecl", default-features = false, rev = "018341e10e98dd6e93ac28592adc56f5710c1453" }
+# cubecl-common = { git = "https://github.com/tracel-ai/cubecl", default-features = false, rev = "018341e10e98dd6e93ac28592adc56f5710c1453" }
+# cubecl-quant = { git = "https://github.com/tracel-ai/cubecl", default-features = false, rev = "018341e10e98dd6e93ac28592adc56f5710c1453" }
 ### For local development. ###
-# cubecl = { path = "../cubecl/crates/cubecl", default-features = false }
-# cubecl-common = { path = "../cubecl/crates/cubecl-common", default-features = false }
-# cubecl-quant = { path = "../cubecl/crates/cubecl-quant", default-features = false }
+cubecl = { path = "../cubecl/crates/cubecl", default-features = false }
+cubecl-common = { path = "../cubecl/crates/cubecl-common", default-features = false }
+cubecl-quant = { path = "../cubecl/crates/cubecl-quant", default-features = false }
 ### For the release. ###
 # cubecl = { version = "0.6.0", default-features = false }
 # cubecl-common = { version = "0.6.0", default-features = false }
