store(safetensors)+cubecl: zero-copy mmap-backed TensorData for file loads; add batched apply path (feature cubecl-batch) and BatchTensorOps; implement batch in burn-cubecl via create_tensors

--- a/crates/burn-store/Cargo.toml
+++ b/crates/burn-store/Cargo.toml
@@ -17,7 +17,8 @@ workspace = true
 [features]
 default = ["std"]
 std = ["dep:memmap2", "safetensors/std", "burn-core/std", "burn-tensor/std", "dep:regex"]
-wgpu = ["burn-wgpu"]
+cubecl-batch = []
+wgpu = ["burn-wgpu", "cubecl-batch"]
 metal = ["wgpu", "burn-wgpu/metal"]
 cuda = ["burn-cuda"]
 candle = ["burn-candle"]
